# sett-assignment

./: 0_README_Task_Instructions.md  1_PRD_Fishing_In_The_Deep.md  2_Prompts_Template.txt  3_Submission_checklist.txt  README.md  example_playable.html  main.py  pyproject.toml
best_results/2025_12_30__07_30/: implementation.html  plan.txt
best_results/2025_12_30__07_51/: implementation.html
final_result/: Chosen_Plan.txt  Chosen_Plan_Prompt.txt  implementation.html
prompts/: implementation.txt  plan.txt
results/: implementation.html  plan.txt
