[project]
name = "sett_ai_game_engineer_task_2"
version = "0.1.0"
description = ""
authors = [
    {name = "AndreMicheletti", email = "andreluizmtmicheletti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=2.14.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
